[project]
name = "apixwaves"
requires-python = ">= 3.9"
description = "Python library to compute cross spectra from SAR image"
readme.file = "README.md"
readme.content-type = "text/markdown"
#license.text = "GPL-3.0"
license = {text = "GPL-3.0"}
keywords = ["SAR", "wave", "reseach", "cross-spectra"]
authors = [
  {name = "Antoine Grouazel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xarray",
    "numpy",
    "netCDF4",
    "importlib_resources",
    'tqdm',
    'pillow'
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apixwaves"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "apixwaves"